Fixing some styling and layout issues in IE 8 & 9

--- a/src/_1_modules/0-cmsContent/cmsContent.scss
+++ b/src/_1_modules/0-cmsContent/cmsContent.scss
@@ -8,10 +8,6 @@ $C-dots: brand(1);
 .cmsContent td {
 	text-align: left;
 
-	.no-flexbox & {
-		max-width: 780px;
-	}
-
 	strong,
 	b {
 		font-weight: $bold;
