--- a/src/_1_modules/nav/nav.scss
+++ b/src/_1_modules/nav/nav.scss
@@ -1,4 +1,5 @@
 .nav {
+	width: 300px;
 	width: $VG-nav__width;
 
 	@include mq($MQG-nav--hidden) {
